--- a/css/style.css
+++ b/css/style.css
@@ -631,9 +631,9 @@ h6 {
 
 #services .description {
   font-size: 14px;
-  line-height: 28px;
+  line-height: 23px;
   margin-bottom: 0;
-  text-align: left;
+  text-align: center;
 }
 
 /* Why Us Section
