--- a/css/style.css
+++ b/css/style.css
@@ -985,9 +985,9 @@ h6 {
   transition: 0.4s;
 }
 
-#team .member:hover .member-info-content {
-  height: 80px;
-}
+/* #team .member:hover .member-info-content {
+height: 80px;
+} */
 
 #team .member h4 {
   font-weight: 700;
